--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -50,6 +50,9 @@ body {
     position: relative;
     z-index: 9998; /* Place content below the loader */
 }
+.content marquee{
+    display: block;
+}
 
 @keyframes load {
 0% { left: 0; height: 30px; width: 15px }
@@ -57,25 +60,12 @@ body {
 100% { left: 235px; height: 30px; width: 15px}
 }
 
-/* Start Other Navbar Styling */
+/* Start Navbar Styling */
 .navbar{
-    padding: 2rem 3rem;    
-}
-.navbar-brand{
-    font-size: 30px;
-    font-family: 'Poppins', sans-serif;
-}
-.nav-link{
-    font-size: 25px;
-    
-}
-/* End Other Navbar Styling */
-
-/* Start Other Navbar Styling */
-.navbar{
+    padding: 2rem 3rem;
+    width: 100%;
     position: fixed;
     z-index: 1;
-    padding: 1rem 3rem; 
     background-color: rgb(15, 15, 15, 0);   
 }
 .navbar-brand{
@@ -84,8 +74,35 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .nav-link{
-    font-size: 25px;
-    
+    color: white;
+    font-size: 20px;    
+}
+.nav-link:hover{
+    color: white;
+    font-size: 20px;    
+}
+.nav-link:hover > .navhr{
+    width: 100%;
+    transition: 0.5s;
+}
+.nav-link > .activated{
+    width: 100%;
+}
+.navhr{
+    width: 0%;
+    padding: 0;
+    margin: 0;
+    height: 3px;
+    background-color: red;
+    z-index: 1;
+}
+.activated{
+    width: 0%;
+    padding: 0;
+    margin: 0;
+    height: 3px;
+    background-color: red;
+    z-index: 1;
 }
 /* End Other Navbar Styling */
 
@@ -99,5 +116,16 @@ body {
     height: 100vh;
     width: 100vw;
 }
-/* End Homepage Styles */
 
+.banner{
+    align-items: center;
+    /* margin: 6rem auto; */
+    padding-top: 50vh;
+    color: white;
+    z-index: 1;
+} 
+.banner h1{
+    font-size: 60px;
+    font-family: 'PT Sans', sans-serif;
+}
+/* End Homepage Styles */
