--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,43 +57,58 @@ body {
 100% { left: 235px; height: 30px; width: 15px}
 }
 
-/* Start Other Navbar Styling */
+/* Start Navbar Styling */
 .navbar{
-    padding: 2rem 3rem;    
+    padding: 2rem 3rem;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    background-color: rgb(15, 15, 15);   
 }
 .navbar-brand{
     font-size: 30px;
+    color: white;
     font-family: 'Poppins', sans-serif;
 }
 .nav-link{
-    font-size: 25px;
-    
+    color: white;
+    font-size: 20px;    
 }
-/* End Other Navbar Styling */
-
-/* Start Other Navbar Styling */
-.navbar{
-    padding: 2rem 3rem;    
+.nav-link:hover{
+    color: white;
+    font-size: 20px;    
 }
-.navbar-brand{
-    font-size: 30px;
-    font-family: 'Poppins', sans-serif;
+.nav-link:hover > .navhr{
+    width: 100%;
+    transition: 0.5s;
 }
-.nav-link{
-    font-size: 25px;
-    
+.nav-link > .activated{
+    width: 100%;
 }
-/* End Other Navbar Styling */
+.navhr{
+    width: 0%;
+    padding: 0;
+    margin: 0;
+    height: 3px;
+    background-color: red;
+    z-index: 1;
+}
+.activated{
+    width: 0%;
+    padding: 0;
+    margin: 0;
+    height: 3px;
+    background-color: red;
+    z-index: 1;
+}
+/* End Navbar Styling */
 
 
 
 /* Start Homepage Styles */
-.carousel{
-    background-image: url('../images/ban2.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    width: 100vw;
+main{
+    /* margin: 4rem 0rem; */
+    padding: 8rem 0rem;
 }
 /* End Homepage Styles */
 
