--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,8 +42,6 @@ body {
 .content {
     display: none; /* Initially hide the content */
     text-align: center;
-    /* padding: 20px; */
-    /* background-image: url("../images/b3.jpg"); */
     background-repeat: no-repeat center center fixed;
     background-size: cover;
     height: 100vh;
@@ -65,10 +63,11 @@ body {
     z-index: 1;
     background-color: rgb(15, 15, 15);   
 }
-.navbar-brand{
-    font-size: 30px;
-    color: white;
-    font-family: 'Poppins', sans-serif;
+.navbar-brand img{
+    width: 80%;
+}
+.footer-img{
+    width: 30%;
 }
 .nav-link{
     color: white;
@@ -109,6 +108,18 @@ body {
 main{
     /* margin: 4rem 0rem; */
     padding: 8rem 0rem;
+}
+.myfooter{
+    padding: 2rem 0rem;
+    background-color: black;
+    color: rgb(226, 223, 223);
+}
+.foot-feat{
+    padding: 1rem 2rem;
+    text-align: justify;
+}
+.foot-feat p{
+    margin-top: 1rem;
 }
 /* End Homepage Styles */
 
