--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -41,17 +41,12 @@ body {
 }
 .content {
     display: none; /* Initially hide the content */
-    text-align: center;
-    /* padding: 20px; */
-    /* background-image: url("../images/b3.jpg"); */
+    text-align: center;    
     background-repeat: no-repeat center center fixed;
     background-size: cover;
     height: 100vh;
     position: relative;
     z-index: 9998; /* Place content below the loader */
-}
-.content marquee{
-    display: block;
 }
 
 @keyframes load {
@@ -68,10 +63,11 @@ body {
     z-index: 1;
     background-color: rgb(15, 15, 15, 0);   
 }
-.navbar-brand{
-    font-size: 30px;
-    color: white;
-    font-family: 'Poppins', sans-serif;
+.navbar-brand img{
+    width: 80%;
+}
+.footer-img{
+    width: 30%;
 }
 .nav-link{
     color: white;
@@ -104,28 +100,86 @@ body {
     background-color: red;
     z-index: 1;
 }
+.mo-icon{
+    z-index: 1;
+    border: 2px solid white;
+    width: 60px;
+    padding: 0.3rem 0rem;
+    color: white;
+    border-radius: 10px;
+}
+
+@media screen and (max-width: 667px){
+    .navbar{
+        margin: 0px;
+        padding: 2rem 0rem;
+    }
+    .navbar-brand img{
+        width: 50%;
+    }  
+    .navbar-expand-lg{
+        margin-left: 0px;
+        padding-left: 0rem;
+    }  
+    .navbar-fixed-top{
+        margin-left: 0px;
+        padding-left: 0px;
+    }
+}
 /* End Other Navbar Styling */
 
 
 
 /* Start Homepage Styles */
 .carousel{
-    background-image: url('../images/ban2.png');
+    background-image: url('../images/ban3.png');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 .banner{
     align-items: center;
     /* margin: 6rem auto; */
-    padding-top: 50vh;
+    padding-top: 35vh;
     color: white;
     z-index: 1;
 } 
 .banner h1{
     font-size: 60px;
     font-family: 'PT Sans', sans-serif;
+}
+.banner marquee{
+    font-size: 25px;
+}
+.banner button{
+    border: 2px solid red;
+    border-radius: 10px;
+    background-color: rgb(0, 0, 0, 0.2);
+    color: white;
+    transition: 1s;
+    transition: ease-out 1s;
+    width: 10%;
+    padding: 0.3rem;
+}
+.banner button:hover{
+    border: 2px solid red;
+    border-radius: 10px;
+    background-color: red;
+    transition: 1s;
+    transition: ease-out 1s;
+    color: white;
+    width: 10%;
+    padding: 0.3rem;
+}
+.myfooter{
+    background-color: black;
+    color: rgb(226, 223, 223);
+}
+.myfooter{
+    padding: 2rem 0rem;
+    background-color: black;
+    color: rgb(226, 223, 223);
 }
 /* End Homepage Styles */
