--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,7 @@
+:root{
+    --g-font: rgb(3, 3, 222);
+}
+
 body {
     margin: 0px;
     padding: 0px;
@@ -12,23 +16,26 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     font-family: helvetica, arial, sans-serif;
     text-transform: uppercase;
     font-weight: 900;
-    color: #ce4233;;
+    color: var(--g-font);
+    ;
     letter-spacing: 0.2em;
 
-    &::before, &::after {
+    &::before,
+    &::after {
         content: "";
         display: block;
         width: 15px;
         height: 15px;
-        background: #ce4233;;
+        background: #ce4233;
+        ;
         position: absolute;
         animation: load .7s infinite alternate ease-in-out;
 
-        
+
     }
 
     &::before {
@@ -39,68 +46,118 @@ body {
         bottom: 0;
     }
 }
+
 .content {
-    display: none; /* Initially hide the content */
-    text-align: center;    
+    display: none;
+    /* Initially hide the content */
+    text-align: center;
     background-repeat: no-repeat center center fixed;
     background-size: cover;
     height: 100vh;
     position: relative;
-    z-index: 9998; /* Place content below the loader */
+    z-index: 9998;
+    /* Place content below the loader */
 }
 
 @keyframes load {
-0% { left: 0; height: 30px; width: 15px }
-50% { height: 8px; width: 40px }
-100% { left: 235px; height: 30px; width: 15px}
+    0% {
+        left: 0;
+        height: 30px;
+        width: 15px
+    }
+
+    50% {
+        height: 8px;
+        width: 40px
+    }
+
+    100% {
+        left: 235px;
+        height: 30px;
+        width: 15px
+    }
 }
 
 /* Start Navbar Styling */
-.navbar{
+.navbar {
     padding: 2rem 3rem;
     width: 100%;
     position: fixed;
     z-index: 1;
-    background-color: rgb(15, 15, 15, 0);   
+    background-color: rgb(15, 15, 15, 0);
 }
-.navbar-brand img{
+
+.navbar-brand img {
     width: 80%;
 }
-.footer-img{
+
+.footer-img {
     width: 30%;
 }
-.nav-link{
+
+.nav-link {
     color: white;
-    font-size: 20px;    
+    font-size: 20px;
 }
-.nav-link:hover{
+
+.nav-link:hover {
     color: white;
-    font-size: 20px;    
+    font-size: 20px;
 }
-.nav-link:hover > .navhr{
+
+.nav-link:hover>.navhr {
     width: 100%;
     transition: 0.5s;
 }
-.nav-link > .activated{
+
+.nav-link>.activated {
     width: 100%;
 }
-.navhr{
+
+.navhr {
     width: 0%;
     padding: 0;
     margin: 0;
     height: 3px;
-    background-color: red;
+    background-color: var(--g-font);
     z-index: 1;
 }
-.activated{
+
+.reg_btn{
+    background-color: var(--g-font);
+    border: 1px solid black;
+    font-size: 16px;
+    padding: 5px;
+    border-radius: 5px;
+    transition: 1s;
+    transition: ease-out 1s;
+}
+.reg_btn:hover{
+    color: var(--g-font);
+    background-color: white;
+    border: 1px solid var(--g-font);
+    font-size: 16px;
+    padding: 5px;
+    border-radius: 5px;
+}
+span{
+    color:var(--g-font);
+}
+.navbar{
+    background-color: black;
+    opacity: 0.8;
+}
+
+.activated {
     width: 0%;
     padding: 0;
     margin: 0;
     height: 3px;
-    background-color: red;
+    background-color: var(--g-font);
     z-index: 1;
 }
-.mo-icon{
+
+.mo-icon {
     z-index: 1;
     border: 2px solid white;
     width: 60px;
@@ -109,29 +166,33 @@ body {
     border-radius: 10px;
 }
 
-@media screen and (max-width: 667px){
-    .navbar{
+@media screen and (max-width: 667px) {
+    .navbar {
         margin: 0px;
         padding: 2rem 0rem;
     }
-    .navbar-brand img{
+
+    .navbar-brand img {
         width: 50%;
-    }  
-    .navbar-expand-lg{
+    }
+
+    .navbar-expand-lg {
         margin-left: 0px;
         padding-left: 0rem;
-    }  
-    .navbar-fixed-top{
+    }
+
+    .navbar-fixed-top {
         margin-left: 0px;
         padding-left: 0px;
     }
 }
+
 /* End Other Navbar Styling */
 
 
 
 /* Start Homepage Styles */
-.carousel{
+.carousel {
     background-image: url('../images/ban3.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -139,22 +200,25 @@ body {
     width: 100%;
 }
 
-.banner{
+.banner {
     align-items: center;
     /* margin: 6rem auto; */
     padding-top: 35vh;
     color: white;
     z-index: 1;
-} 
-.banner h1{
+}
+
+.banner h1 {
     font-size: 60px;
     font-family: 'PT Sans', sans-serif;
 }
-.banner marquee{
+
+.banner marquee {
     font-size: 25px;
 }
-.banner button{
-    border: 2px solid red;
+
+.banner button {
+    border: 2px solid var(--g-font);
     border-radius: 10px;
     background-color: rgb(0, 0, 0, 0.2);
     color: white;
@@ -163,52 +227,215 @@ body {
     width: 10%;
     padding: 0.3rem;
 }
-.banner button:hover{
-    border: 2px solid red;
+
+.banner button:hover {
+    border: 2px solid var(--g-font);
     border-radius: 10px;
-    background-color: red;
+    background-color: var(--g-font);
     transition: 1s;
     transition: ease-out 1s;
     color: white;
     width: 10%;
     padding: 0.3rem;
 }
-.myfooter{
+
+.myfooter {
     background-color: black;
     color: rgb(226, 223, 223);
 }
-.myfooter{
+
+.myfooter {
     padding: 2rem 0rem;
     background-color: black;
     color: rgb(226, 223, 223);
 }
-.foot-feat{
+
+.foot-feat {
     padding: 1rem 1rem;
     text-align: left;
 }
-.foot-feat p{
+
+.foot-feat p {
     margin-top: 1rem;
 }
-.myfooter2{
-    background-color: rgb(63, 61, 61);    
+
+.myfooter2 {
+    background-color: rgb(63, 61, 61);
     padding: 1rem 0rem;
     color: rgb(217, 214, 214);
 }
-.others{
+
+.others {
     margin: 4rem 0rem;
 }
-.abt-left{
+
+.abt-left {
     padding: 2rem 1rem;
     text-align: left;
     font-size: 20px;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
-.abt-right{
+
+.abt-right {
     display: flex;
     margin: auto auto;
-    justify-content: center;    
+    justify-content: center;
 }
-.abt-right img{    
+
+.abt-right img {
     width: 500px;
 }
+
 /* End Homepage Styles */
+
+/* Media Queries styling */
+    @media screen and (max-width: 820px) {
+        #logo_img {
+            width: 12em;
+        }
+
+        .banner marquee {
+            font-size: 20px;
+        }
+
+        .banner h1 {
+            font-size: 60px;
+            font-family: 'PT Sans', sans-serif;
+        }
+
+        .banner button {
+            border: 2px solid var(--g-font);
+            border-radius: 10px;
+            background-color: rgb(0, 0, 0, 0.2);
+            color: white;
+            transition: 1s;
+            transition: ease-out 1s;
+            width: 30%;
+            padding: 0.3rem;
+            font-size: 20px;
+        }
+        .banner button:hover {
+            border: 2px solid var(--g-font);
+            border-radius: 10px;
+            background-color: var(--g-font);
+            transition: 1s;
+            transition: ease-out 1s;
+            color: white;
+            width: 30%;
+            padding: 0.3rem;
+        }
+    }
+
+    @media screen and (max-width: 414px) {
+        #logo_img {
+            width: 12em;
+        }
+
+        .banner marquee {
+            font-size: 17px;
+        }
+
+        .banner h1 {
+            font-size: 30px;
+            font-family: 'PT Sans', sans-serif;
+        }
+
+        .banner button {
+            border: 2px solid var(--g-font);
+            border-radius: 10px;
+            background-color: rgb(0, 0, 0, 0.2);
+            color: white;
+            transition: 1s;
+            transition: ease-out 1s;
+            width: 36%;
+            padding: 0.3rem;
+            font-size: 16px;
+        }
+        .banner button:hover {
+            border: 2px solid var(--g-font);
+            border-radius: 10px;
+            background-color: var(--g-font);
+            transition: 1s;
+            transition: ease-out 1s;
+            color: white;
+            width: 36%;
+            padding: 0.3rem;
+            font-size: 16px
+        }
+    }
+
+    @media screen and (max-width: 375px) {
+        #logo_img {
+            width: 12em;
+        }
+
+        .banner marquee {
+            font-size: 15px;
+        }
+
+        .banner h1 {
+            font-size: 30px;
+            font-family: 'PT Sans', sans-serif;
+        }
+
+        .banner button {
+            border: 2px solid var(--g-font);
+            border-radius: 10px;
+            background-color: rgb(0, 0, 0, 0.2);
+            color: white;
+            transition: 1s;
+            transition: ease-out 1s;
+            width: 36%;
+            padding: 0.3rem;
+            font-size: 16px;
+        }
+        .banner button:hover {
+            border: 2px solid var(--g-font);
+            border-radius: 10px;
+            background-color: var(--g-font);
+            transition: 1s;
+            transition: ease-out 1s;
+            color: white;
+            width: 36%;
+            padding: 0.3rem;
+            font-size: 16px
+        }
+    }
+
+    @media screen and (max-width: 320px) {
+        #logo_img {
+            width: 10em;
+        }
+
+        .banner marquee {
+            font-size: 15px;
+        }
+
+        .banner h1 {
+            font-size: 26px;
+            font-family: 'PT Sans', sans-serif;
+        }
+
+        .banner button {
+            border: 2px solid var(--g-font);
+            border-radius: 10px;
+            background-color: rgb(0, 0, 0, 0.2);
+            color: white;
+            transition: 1s;
+            transition: ease-out 1s;
+            width: 36%;
+            padding: 0.3rem;
+            font-size: 16px;
+        }
+        .banner button:hover {
+            border: 2px solid var(--g-font);
+            border-radius: 10px;
+            background-color: var(--g-font);
+            transition: 1s;
+            transition: ease-out 1s;
+            color: white;
+            width: 36%;
+            padding: 0.3rem;
+            font-size: 16px
+        }
+
